my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENCONST_array_type/T_ENCONST_array_type-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_ENCONST_ARRAY_TYPE_STRUCT_H
#define T_ENCONST_ARRAY_TYPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENCONST_array_type(void);


#endif /* not T_ENCONST_ARRAY_TYPE_STRUCT_H */
